# cspec

./: .gitignore  COPYING  COPYING.LESSER  Makefile.am  README  VERSIONS  autogen.sh  configure.ac
VC/: CSpec.dsw  CSpecLib.dsp  CSpecSample.dsp  CSpecSampleSkip.dsp  CSpecSampleXml.dsp
etc/: CSpec-Run.xsl
examples/sample/: Makefile  Makefile.am
examples/sample_skip/: skip_list.c  skip_list_org.c
examples/skip/: Makefile  Makefile.am  main.c  skip_list.h  skiplist_spec.c
examples/spanish/: Makefile.am  fabs_desc.c  main.c
examples/spec/: Makefile.am  array_spec.c
examples/xml_output/: Makefile  Makefile.am
inc/: array.h  cspec.h  cspec_config.h  cspec_output.h  cspec_output_header.h  cspec_output_junit_xml.h  cspec_output_unit.h  cspec_output_verbose.h  cspec_output_xml.h  cspec_private.h  cspec_private_output_junit_xml.h  cspec_spanish.h
sample/: Makefile  fabs_desc.c  main.c
sample_skip/: Makefile  skiplist_spec.h
sample_xml/: CSpec-Run.xsl  Makefile  main.c
spec/: Makefile  Makefile.am  array_spec.c  cspec_output_junit_xml_spec.c  spec_runner.c
src/: Makefile  Makefile.am  array.c  cspec_config.c  cspec_output.c  cspec_output_header.c  cspec_output_junit_xml.c  cspec_output_unit.c  cspec_output_verbose.c  cspec_output_xml.c  cspec_private.c  cspec_runner.c
